[gd_scene load_steps=5 format=3 uid="uid://b0n1wphde1yjd"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_d58k7"]
[ext_resource type="Texture2D" uid="uid://dskeyflqy4ob3" path="res://icon.svg" id="2_dh3rp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dh5p"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_a7ixm"]

[node name="Player" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_d58k7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dh3rp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2dh5p")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(13, 13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_a7ixm")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
